<package>
  <name>ackermann_cmd_mux</name>
  <version>0.7.0</version>
  <description>
     A multiplexer for ackermann command velocity inputs. Arbitrates incoming ackermann_cmd messages from
     several topics, allowing one topic at a time to command the robot, based on priorities. It also
     deallocates current allowed topic if no messages are received after a configured timeout. All topics,
     together with their priority and timeout are configured through a YAML file, that can be reload at
     runtime. Blatantly derived / copied from yujin_ocs/yocs_cmd_vel_mux.
  </description>
  <author>Jorge Santos Simon</author>
  <author>Michael Boulet</author>
  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ackermann_cmd_mux</url>
  <url type="repository">https://github.mit.edu/racecar/racecar</url>
  <url type="bugtracker">https://github.mit.edu/racecar/racecar/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
