<?xml version="1.0"?>
<package>
  <name>joy_to_servo</name>
  <version>0.0.1</version>
  <description>Simple node to convert joystick messages to servo commands.</description>

  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
