<?xml version="1.0"?>
<package>
  <name>racecar</name>
  <version>0.0.1</version>
  <description>RACECAR IAP Course launch scripts</description>

  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <!--<run_depend>roscpp</run_depend>-->

  <export>
  </export>
</package>
