<?xml version="1.0"?>
<package>
  <name>racecar</name>
  <version>0.0.1</version>
  <description>RACECAR launch scripts</description>

  <author>Michael Boulet</author>
  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <run_depend>razor_imu_9dof</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rviz</run_depend>

  <!-- specific to racecar-v1 -->
  <!-- <run_depend>pointgrey_camera_driver</run_depend> -->
  <!-- <run_depend>px4flow</run_depend> -->
  <!-- <run_depend>pwm_sysfs_driver</run_depend> -->

  <!-- specific to racecar-v2 -->

  <!-- mapping -->
  <run_depend>gmapping</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>robot_pose_ekf</run_depend>

  <export>
  </export>
</package>
