<?xml version="1.0"?>
<package>
  <name>turtlesim_gamepad_control</name>
  <version>0.1.0</version>
  <description>Drive the TurtleSim robot with the gamepad</description>
  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>